testsuite/tests/checks/controlled_type_declarations/test.out
controlled_type_declarations.ads:5:9: error: Controlled_Type_Declarations - rule violation
5 |    type Resource is new Ada.Finalization.Controlled with private;  --  FLAG
  |         ^^^^^^^^ 

controlled_type_declarations.ads:5:9: error: Controlled_Type_Declarations - rule violation
6 |    type Resource_2 is tagged private;  --  FLAG 
  |         ^^^^^^^^^^ 

controlled_type_declarations.ads:12:9: error: Controlled_Type_Declarations - rule violation
12 |    type Resource is new Ada.Finalization.Controlled with null record; -- FLAG
   |         ^^^^^^^^ 

controlled_type_declarations.ads:13:9: error: Controlled_Type_Declarations - rule violation
13 |    type Resource_2 is new Ada.Finalization.Controlled with null record; -- FLAG
   |         ^^^^^^^^^^ 

controlled_type_declarations.ads:14:9: error: Controlled_Type_Declarations - rule violation
14 |    type Resource_4 is new Resource_2 with null record; -- FLAG
   |         ^^^^^^^^^^ 

